k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: calculator
    version: "1"
  ports:
    - port: 9090       # porta do Service
      targetPort: 9090 # porta do container
      nodePort: 32306  # opcional, ou pode deixar o Kubernetes escolher
